--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "maktro-ms",
+  "name": "kamu-sms",
   "version": "1.0.0",
   "description": "A business management system built for Maktro.com",
   "main": "app.js",
@@ -9,19 +9,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Mr-spShuvo/maktro-ms.git"
+    "url": ""
   },
   "keywords": [
     "nodejs",
     "express",
     "mongodb"
   ],
-  "author": "Shahriar Parvez",
+  "author": "Kamlesh Thakur",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Mr-spShuvo/maktro-ms/issues"
+    "url": "/issues"
   },
-  "homepage": "https://github.com/Mr-spShuvo/maktro-ms#readme",
+  "homepage": "#readme",
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
